<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addTaskLayout"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="Add Task"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPersonName"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/task_title"
            android:layout_width="338dp"
            android:layout_height="63dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="#E2F6FF"
            android:ems="10"
            android:hint="@string/task_title"
            tools:layout_editor_absoluteX="71dp"
            tools:layout_editor_absoluteY="233dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="338dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">

        <EditText
            android:id="@+id/task_desc"
            android:layout_width="338dp"
            android:layout_height="63dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="#E2F6FF"
            android:ems="10"
            android:hint="@string/task_description"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="363dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/addTeam"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="65dp"
        android:entries="@array/teams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/adding"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="159dp"
        android:backgroundTint="@color/teal_700"
        android:text="Add Task"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/total"
        android:layout_width="149dp"
        android:layout_height="56dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="128dp"
        android:text="Total Tasks: 0"
        android:textColor="#020202"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adding"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="Choose a team: "
        android:textColor="#015A5A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:textColor="#015A5A"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="Upload a picture: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/upload"
        android:layout_width="99dp"
        android:layout_height="42dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="21dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@color/white"
        android:text="Upload"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/addTeam" />


</androidx.constraintlayout.widget.ConstraintLayout>