<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingLayout"
    tools:context=".Settings">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="341dp"
        android:layout_height="63dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:backgroundTint="#E2F6FF"
            android:ems="10"
            android:hint="@string/username"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="363dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/enter_your_username"
        android:textColor="#015E5D"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/chooseTeam"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="65dp"
        android:entries="@array/teams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:text="Choose a team: "
        android:textColor="#015A5A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Button
        android:id="@+id/save"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="80dp"
        android:text="save"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="305dp"
        android:layout_height="184dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tasks_username" />

</androidx.constraintlayout.widget.ConstraintLayout>