<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskDetails">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="46dp"
        android:layout_height="41dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="6dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/locCoordinate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate"
        app:srcCompat="@drawable/place_active" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="352dp"
        android:layout_height="180dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/back"
        android:fontFamily="@font/boogaloo"
        android:text="@string/lorem_string"
        android:textColor="#00302F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleView" />

    <TextView
        android:id="@+id/task_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/state_design"
        android:gravity="center"
        android:selectAllOnFocus="false"
        android:shadowColor="#7E7E7E"
        android:text="state"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskImage" />

    <TextView
        android:id="@+id/taskTitleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#C9FFFF"
        android:fontFamily="@font/carter_one"
        android:padding="5dp"
        android:text="Task Title"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_state" />

    <ImageView
        android:id="@+id/taskImage"
        android:layout_width="400dp"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageButton
        android:id="@+id/read"
        android:layout_width="58dp"
        android:layout_height="59dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off"
        app:tint="#005C54" />

    <ImageView
        android:id="@+id/translate"
        android:layout_width="46dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/translation" />

    <TextView
        android:id="@+id/locCoordinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:text="Location"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translate" />

</androidx.constraintlayout.widget.ConstraintLayout>