<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="348dp"
        android:layout_height="190dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/user_name"
        app:srcCompat="@drawable/my_tasks" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/teal_700"
        android:text="Add Task"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/allTasks"
        android:layout_width="116dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/teal_700"
        android:text="All Tasks"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/userTasks"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/username_back"
        android:fontFamily="sans-serif-smallcaps"
        android:text="User Tasks"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTask" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="12dp"
        android:background="#C6018786"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userTasks" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="Welcome User Name"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasks"
        tools:layout_editor_absoluteY="679dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/interstitialAd"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="In"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rewardedAd"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="13dp"
        android:text="Re"
        app:layout_constraintEnd_toStartOf="@+id/interstitialAd"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>